Fixed bug where task text was being cut off.

--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    /* border: red solid 1px; */
 }
 
 input:not([type="radio"]):not([type="checkbox"]), button {
@@ -28,6 +29,7 @@ input:not([type="radio"]):not([type="checkbox"]), button {
     outline: none;
     background: none;
     cursor: initial;
+    width: 100%;
 }
 
 body {
